# twitter_clone

./: pyproject.toml
authentication/: forms.py  views.py
notification/: admin.py  models.py  views.py
notification/migrations/: 0001_initial.py
templates/: add_tweet_form.html  index.html  login.html  notification.html  signup.html  tweet_detail.html  user_profile.html
tweet/: admin.py  forms.py  models.py  views.py
tweet/migrations/: 0001_initial.py  0002_tweet_submitted_by.py  0003_auto_20200526_1349.py
twitterclone/: settings.py  urls.py
twitteruser/: admin.py  get_tweets.py  models.py  views.py
twitteruser/migrations/: 0001_initial.py  0002_profile_following.py  0003_auto_20200526_1448.py
