[tool.poetry]
name = "twitter_clone_assessment"
version = "0.1.0"
description = ""
authors = ["Jonathan Jones <jonathan.jones51@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.0.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
